--- a/app/src/main/res/layout/statusfragmentlayout.xml
+++ b/app/src/main/res/layout/statusfragmentlayout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -68,7 +68,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@id/mystatus"
-            android:visibility="invisible"
+            android:visibility="visible"
             android:fontFamily="@font/poppins"
             android:text="Tap to add status"
             android:textColor="@color/grey"
@@ -119,6 +119,21 @@
             android:layout_marginTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent" />
     </RelativeLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_person"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        app:tint ="@color/white"
+        android:backgroundTint="#F46E6B"
+        android:layout_marginBottom="20dp"
+        android:clickable="true"
+
+        style="@style/FloatingActionOverlay"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_baseline_camera_alt_24"
+        />
 <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
 <!--        android:id="@+id/add_status"-->
 <!--        android:layout_width="wrap_content"-->
