--- a/app/src/main/res/layout/newgrouplayout.xml
+++ b/app/src/main/res/layout/newgrouplayout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,9 +10,12 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/guideline2"
         app:layout_constraintRight_toRightOf="@id/guideline3"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image"
@@ -21,15 +25,23 @@
             android:src="@drawable/group" />
 
         <EditText
+            android:id="@+id/grpname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter group name"
             android:textAlignment="center" />
 
+        <EditText
+            android:id="@+id/grpdiscpt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter group discription"
+            android:textAlignment="center" />
+
         <HorizontalScrollView
             android:layout_width="match_parent"
-            android:scrollbars="none"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:scrollbars="none">
 
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/childgroup"
@@ -58,8 +70,23 @@
             android:text="Submit"
             android:textColor="@color/white" />
 
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+
 
     </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/showGroups"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:layout_constraintLeft_toLeftOf="@id/guideline2"
+        app:layout_constraintRight_toRightOf="@id/guideline3"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
