--- a/app/src/main/res/drawable/round_img.xml
+++ b/app/src/main/res/drawable/round_img.xml
@@ -2,5 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-    <corners android:radius="10dp" />
+    <corners android:radius="3dp" />
+    <stroke
+        android:width="@dimen/_1sdp"
+        android:color="@color/grey"/>
+
 </shape>
