ui design login,otp,register,several logic corrected

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="350dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
-        app:srcCompat="@drawable/splash" />
+        app:srcCompat="@drawable/ic_main" />
 
     <FrameLayout
         android:id="@+id/frame"
