--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -25,19 +25,20 @@
         android:fontFamily="@font/poppins_semibold"
         android:text="Welcome back!"
         android:textSize="@dimen/_25ssp"
-        app:layout_constraintRight_toRightOf="@id/guideline2"
         app:layout_constraintLeft_toLeftOf="@id/guideline1"
+        app:layout_constraintRight_toRightOf="@id/guideline2"
         app:layout_constraintTop_toBottomOf="@id/img" />
+
     <TextView
         android:id="@+id/lay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="@id/guideline2"
-        app:layout_constraintLeft_toLeftOf="@id/guideline1"
+        android:fontFamily="@font/poppins"
         android:text="Sign in to your account"
         android:textStyle="bold"
-        android:fontFamily="@font/poppins"
-        app:layout_constraintTop_toBottomOf="@id/label3"/>
+        app:layout_constraintLeft_toLeftOf="@id/guideline1"
+        app:layout_constraintRight_toRightOf="@id/guideline2"
+        app:layout_constraintTop_toBottomOf="@id/label3" />
 
     <TextView
         android:id="@+id/labelphone"
@@ -49,7 +50,7 @@
         android:textSize="@dimen/_10ssp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@id/guideline1"
-        app:layout_constraintTop_toBottomOf="@id/lay"/>
+        app:layout_constraintTop_toBottomOf="@id/lay" />
 
     <EditText
         android:id="@+id/edt_name"
@@ -68,10 +69,10 @@
         android:text=""
         android:textSize="@dimen/_15ssp"
         android:textStyle="bold"
-        app:layout_constraintRight_toRightOf="@id/guideline2"
         app:layout_constraintLeft_toLeftOf="@id/guideline1"
-        app:layout_constraintTop_toBottomOf="@id/labelphone"
-    />
+        app:layout_constraintRight_toRightOf="@id/guideline2"
+        app:layout_constraintTop_toBottomOf="@id/labelphone" />
+
     <TextView
         android:id="@+id/labelpass"
         android:layout_width="wrap_content"
@@ -81,16 +82,16 @@
         android:text="Password"
         android:textSize="@dimen/_10ssp"
         android:textStyle="bold"
-      app:layout_constraintTop_toBottomOf="@id/edt_name"
-        app:layout_constraintLeft_toLeftOf="@id/guideline1" />
+        app:layout_constraintLeft_toLeftOf="@id/guideline1"
+        app:layout_constraintTop_toBottomOf="@id/edt_name" />
 
     <RelativeLayout
         android:id="@+id/passlay"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/_15sdp"
-        app:layout_constraintRight_toRightOf="@id/guideline2"
         app:layout_constraintLeft_toLeftOf="@id/guideline1"
+        app:layout_constraintRight_toRightOf="@id/guideline2"
         app:layout_constraintTop_toBottomOf="@id/labelpass">
 
         <EditText
@@ -111,7 +112,7 @@
             android:textStyle="bold" />
 
         <ImageView
-            android:id="@+id/togglepass"
+            android:id="@+id/togglepassl"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:layout_alignParentRight="true"
@@ -121,21 +122,37 @@
             android:src="@drawable/hide" />
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/forgotbt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Forgot Password"
+        android:textAlignment="center"
+        android:textColor="@color/bt_red"
+        android:textSize="@dimen/_13ssp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/passlay" />
+
     <Button
         android:id="@+id/submt_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/round3_red"
-        android:text="  Login   "
+        android:text="    Login    "
         android:textAllCaps="false"
         android:textColor="@color/white"
+        android:textStyle="bold"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passlay" />
+        app:layout_constraintTop_toBottomOf="@+id/forgotbt" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
@@ -143,6 +160,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.38" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
         android:layout_width="wrap_content"
