--- a/app/src/main/res/layout/statusfragmentlayout.xml
+++ b/app/src/main/res/layout/statusfragmentlayout.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:id="@+id/layout_r"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:background="@drawable/statusbg"
+        android:backgroundTint="@null"
+        android:padding="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -22,7 +25,7 @@
             android:fontFamily="@font/poppins"
             android:text="My Status"
             android:textColor="@color/text_grey"
-            android:textSize="18sp"
+            android:textSize="@dimen/_15ssp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,8 +34,8 @@
             android:id="@+id/mystatus"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:layout_marginTop="10dp"
             android:layout_below="@id/textView2"
+            android:layout_marginTop="10dp"
             android:padding="6dp"
             android:src="@mipmap/kik" />
 
@@ -44,8 +47,7 @@
             android:layout_marginTop="10dp"
             app:portion_color="@color/status"
             app:portion_spacing="4dp"
-            app:portion_width="3dp"
-            />
+            app:portion_width="3dp" />
 
         <TextView
             android:id="@+id/stat_name"
@@ -57,7 +59,7 @@
             android:layout_toRightOf="@id/mystatus"
             android:fontFamily="@font/poppins"
             android:text=" "
-            android:textSize="18sp"
+            android:textSize="@dimen/_15ssp"
             android:textStyle="bold" />
 
         <TextView
@@ -68,12 +70,20 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@id/mystatus"
-            android:visibility="visible"
             android:fontFamily="@font/poppins"
             android:text="Tap to add status"
             android:textColor="@color/grey"
-            android:textSize="12sp"
-            android:textStyle="bold" />
+            android:textSize="@dimen/_9ssp"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/editstatus"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:src="@drawable/dots_loading" />
 
         <TextView
             android:id="@+id/timeupdated"
@@ -86,8 +96,21 @@
             android:layout_marginRight="5dp"
             android:fontFamily="@font/poppins"
             android:text=""
-            android:textSize="10sp"
+            android:textSize="@dimen/_8ssp"
             android:textStyle="bold" />
+
+        <RelativeLayout
+            android:id="@+id/lay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/circular_status_view"
+            android:visibility="gone">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/allsts"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
     </RelativeLayout>
 
     <RelativeLayout
@@ -119,28 +142,20 @@
             android:layout_marginTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent" />
     </RelativeLayout>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_person"
+        style="@style/FloatingActionOverlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
-        app:tint ="@color/white"
-        android:backgroundTint="#F46E6B"
         android:layout_marginBottom="20dp"
+        android:backgroundTint="#F46E6B"
         android:clickable="true"
-        style="@style/FloatingActionOverlay"
+        android:src="@drawable/ic_baseline_camera_alt_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/ic_baseline_camera_alt_24"
-        />
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/add_status"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginEnd="16dp"-->
-<!--        android:layout_marginBottom="24dp"-->
-<!--        android:src="@drawable/ic_baseline_camera_alt_24"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
+        app:tint="@color/white" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
