--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="blue">#0e243c</color>
     <color name="lightblue">#1A3B60</color>
     <color name="colorGradientStart">#191919</color>
+    <color name="colorGradientStartlighter">#3F3F3F</color>
     <color name="colorGradientCenter">#d76d77</color>
     <color name="colorGradientEnd">#3a1c71</color>
     <color name="By_creating">#E5E5E5</color>
