--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -51,8 +51,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:fontFamily="@font/poppins"
-                    android:text="Dhruv Sharma"
+                    android:fontFamily="@font/poppins_bold"
+                    android:text=""
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -159,7 +159,6 @@
         android:layout_height="50dp"
         android:layout_margin="5dp"
         app:cardCornerRadius="30dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/send_img"
         app:layout_constraintStart_toStartOf="parent">
@@ -173,11 +172,11 @@
 
             <EditText
                 android:id="@+id/msg_input"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="0.9"
+                android:fontFamily="@font/poppins"
                 android:background="@color/fui_transparent"
-                android:ems="10"
                 android:gravity="center_vertical"
                 android:hint="Type a message"
                 android:inputType="textPersonName"
@@ -185,20 +184,22 @@
 
             <ImageView
                 android:id="@+id/attachment"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.2"
                 android:layout_gravity="center"
+                android:paddingRight="@dimen/_10sdp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                app:srcCompat="@drawable/plus_24px" />
+                app:srcCompat="@drawable/pplace" />
 
-            <ImageView
-                android:id="@+id/img_send"
-                android:layout_width="30dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center"
-                android:layout_marginRight="12dp"
-                app:srcCompat="@drawable/googleg_standard_color_18" />
+<!--            <ImageView-->
+<!--                android:id="@+id/img_send"-->
+<!--                android:layout_width="30dp"-->
+<!--                android:layout_height="24dp"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_marginRight="12dp"-->
+<!--                app:srcCompat="@drawable/googleg_standard_color_18" />-->
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -208,7 +209,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/cardview"
+      app:layout_constraintTop_toTopOf="@id/cardview"
         app:srcCompat="@android:drawable/ic_menu_send" />
 
     <androidx.recyclerview.widget.RecyclerView
