--- a/app/src/main/res/layout/activity_group_info.xml
+++ b/app/src/main/res/layout/activity_group_info.xml
@@ -68,7 +68,7 @@
         android:paddingRight="@dimen/_10sdp"
         android:paddingTop="@dimen/_5sdp"
         android:enabled="false"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/poppins_semibold"
         android:text="Hello everyone "
         android:textAlignment="center"
         android:textSize="@dimen/_10ssp"
@@ -81,6 +81,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_gravity="left"
+        android:fontFamily="@font/poppins"
         android:paddingLeft="@dimen/_15sdp"
         android:text=" "
         android:textStyle="bold"
@@ -93,7 +94,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_5sdp"
         android:layout_marginBottom="@dimen/_10sdp"
-        android:fontFamily="@font/poppins_bold"
+        android:fontFamily="@font/poppins_semibold"
         android:paddingLeft="@dimen/_15sdp"
         android:paddingRight="@dimen/_20sdp"
         android:text="Add participants"
