--- a/app/src/main/res/layout/groupmemberchild.xml
+++ b/app/src/main/res/layout/groupmemberchild.xml
@@ -24,6 +24,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:gravity="center_vertical"
+        android:fontFamily="@font/poppins"
         android:text="Sample Name"
         android:textColor="@color/text_grey"
         android:textSize="12sp"
@@ -37,6 +38,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="Admin"
+        android:fontFamily="@font/poppins_semibold"
         android:textColor="@color/bt_red"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="@id/user_img"
