--- a/app/src/main/res/layout/activity_main_dashboard.xml
+++ b/app/src/main/res/layout/activity_main_dashboard.xml
@@ -54,7 +54,7 @@
             android:id="@+id/myname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins"
+            android:fontFamily="@font/poppins_bold"
             android:layout_marginTop="30dp"
             android:layout_marginStart="15dp"
             android:layout_marginBottom="10dp"
