--- a/app/src/main/res/layout/custome_dialog.xml
+++ b/app/src/main/res/layout/custome_dialog.xml
@@ -21,6 +21,7 @@
             android:layout_height="180dp"
             android:layout_gravity="center"
             android:layout_marginStart="60dp"
+
             android:layout_marginEnd="60dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="15dp">
@@ -38,6 +39,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="14dp"
                 android:gravity="center"
+                android:fontFamily="@font/poppins_semibold"
                 android:text="Add Friend"
                 android:textColor="@android:color/black"
                 android:textSize="20dp"
