--- a/app/src/main/res/layout/groupchatreceiver.xml
+++ b/app/src/main/res/layout/groupchatreceiver.xml
@@ -14,9 +14,9 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="5dp"
-        android:fontFamily="@font/poppins"
+        android:fontFamily="@font/poppins_semibold"
         android:textColor="#FFFFFF"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
@@ -39,11 +39,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
-            android:fontFamily="@font/poppins"
+            android:fontFamily="@font/poppins_semibold"
             android:layout_marginEnd="@dimen/_25sdp"
-            android:text="fdfddfgdfgdfgfdgdf"
+            android:text=""
             android:textSize="@dimen/_8ssp"
             android:visibility="visible" />
+        <ImageView
+            android:id="@+id/show"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_gravity="right"
+            android:visibility="gone"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:layout_marginBottom="-40dp"
+            android:elevation="@dimen/_5sdp"
+            android:src="@drawable/dots_loading"
+            />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/receiver_img"
@@ -61,13 +72,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
-            android:paddingTop="2dp"
+            android:paddingTop="5dp"
             android:paddingRight="25dp"
             android:paddingBottom="5dp"
             android:fontFamily="@font/poppins"
             android:text="dsdd"
             android:textColor="#FFFFFF"
-            android:textSize="14sp"
+            android:textSize="@dimen/_12sdp"
             android:textStyle="bold"
             android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,6 +90,7 @@
         android:id="@+id/imageView2"
         android:layout_width="24dp"
         android:layout_height="24dp"
+        android:layout_marginTop="2dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
