--- a/app/src/main/res/layout/groupmemberupdate.xml
+++ b/app/src/main/res/layout/groupmemberupdate.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:gravity="right"
+        android:fontFamily="@font/poppins_semibold"
         android:padding="10dp"
         android:text="Make group admin"
         android:textColor="@color/black"
@@ -18,6 +19,7 @@
         android:id="@+id/remove"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_semibold"
         android:background="?selectableItemBackground"
         android:gravity="right"
         android:padding="10dp"
@@ -33,6 +35,7 @@
         android:gravity="right"
         android:padding="10dp"
         android:text="Cancel"
+        android:fontFamily="@font/poppins_semibold"
         android:textColor="@color/black"
         android:textSize="16sp" />
 
