--- a/app/src/main/res/layout/sender_layout.xml
+++ b/app/src/main/res/layout/sender_layout.xml
@@ -13,10 +13,11 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="5dp"
-        android:fontFamily="@font/poppins"
+        android:fontFamily="@font/poppins_bold"
         android:textColor="#FFFFFF"
+        android:text=""
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,9 +36,22 @@
         <TextView
             android:id="@+id/sendername"
             android:layout_width="wrap_content"
+            android:fontFamily="@font/poppins"
+            android:text=""
+            android:textSize="@dimen/_8sdp"
             android:layout_height="wrap_content"
-            android:visibility="gone" />
-
+            android:visibility="visible" />
+        <ImageView
+            android:id="@+id/show"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:layout_gravity="right"
+            android:visibility="gone"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:layout_marginBottom="-40dp"
+            android:elevation="@dimen/_5sdp"
+            android:src="@drawable/dots_loading"
+            />
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/sender_img"
             android:layout_width="200dp"
@@ -45,9 +59,10 @@
             android:layout_margin="5dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:visibility="visible"
+            android:visibility="gone"
             app:shapeAppearanceOverlay="@style/roundedImageView"
             tools:srcCompat="@tools:sample/avatars" />
+
 
         <TextView
             android:id="@+id/sender"
@@ -55,12 +70,13 @@
             android:layout_height="wrap_content"
             android:background="@drawable/sender_round"
             android:paddingLeft="10dp"
-            android:paddingTop="10dp"
+            android:paddingTop="5dp"
             android:paddingRight="25dp"
-            android:paddingBottom="10dp"
+            android:paddingBottom="5dp"
+            android:fontFamily="@font/poppins"
             android:text="TextView"
             android:textColor="#FFFFFF"
-            android:textSize="16sp"
+            android:textSize="@dimen/_12sdp"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
