--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -174,7 +174,7 @@ android:hint="firstname"
                         android:focusableInTouchMode="true"
                         android:fontFamily="@font/poppins"
                         android:hint="enter phone number"
-                        android:inputType="phone"
+                        android:inputType="number"
                         android:paddingRight="10dp"
                         android:textColor="@color/text_grey"
                         android:textSize="18sp"
