--- a/app/src/main/res/drawable/checkmark.xml
+++ b/app/src/main/res/drawable/checkmark.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="78.369"
     android:viewportHeight="78.369">
   <path
-      android:fillColor="#0e243c"
+      android:fillColor="@color/grey"
       android:pathData="M78.049,19.015L29.458,67.606c-0.428,0.428 -1.121,0.428 -1.548,0L0.32,40.015c-0.427,-0.426 -0.427,-1.119 0,-1.547l6.704,-6.704c0.428,-0.427 1.121,-0.427 1.548,0l20.113,20.112l41.113,-41.113c0.429,-0.427 1.12,-0.427 1.548,0l6.703,6.704C78.477,17.894 78.477,18.586 78.049,19.015z"/>
 </vector>
